# Atmospheric_modeling_NTNU

./: .gitignore  atmospheric_model.py  legendre_temperature.py  models.py  parameters.py  pyproject.toml
MatMod-H2020/: atmospheric_model.py  models.py
