[tool.poetry]
name = "matmod-h2020"
version = "0.1.0"
description = "Folder for Mathematical Modeling course at NTNU, Autumn H2020."
authors = ["Johannes Voll Kolstø <johannesvk@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
scipy = "matplotlib"
sympy = "^1.6.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
